edited the newpage file

--- a/Winfs Anki CodeBook/newpage.html
+++ b/Winfs Anki CodeBook/newpage.html
@@ -41,7 +41,7 @@
 </head>
 <body>
     <h2><center>Anki Website Page2</center></h2>
-    <a href="D:\_Web Dev\bootcamps\html\Winfs Anki CodeBook\index.html">
+    <a href=".\index.html">
     <center><button>Homepage</button></center>
     </a>
     <header>
