edite the index file files references

--- a/Winfs Anki CodeBook/index.html
+++ b/Winfs Anki CodeBook/index.html
@@ -85,15 +85,15 @@
         <li>Adding an 'Anchor' to a webpage to link to another Webpage or Site, by using the '<'a ref=""'>' anchor tagname</li>
         <!-- D:\_Web Dev\_Bootcamps\Winfs Anki CodeBook\TBC -->
             <ul>
-                <a href="D:\_Web Dev\_Bootcamps\Winfs Anki CodeBook\newpage.html"> Anki Page Two</a>
+                <a href=".\newpage.html"> Anki Page Two</a>
             </ul>
         <li>Registration</li>
             <ul>
-                <a href="D:\_Web Dev\_Bootcamps\Winfs Anki CodeBook\register.html"> Registration Details</a> 
+                <a href=".\register.html"> Registration Details</a> 
             </ul>
             <li>CSS Box</li>
             <ul>
-                <a href="D:\_Web Dev\_Bootcamps\Winfs Anki CodeBook\boxun.html"> CSS Box</a> 
+                <a href=".\boxun.html"> CSS Box</a> 
             </ul>
         <li>etc ...</li>
     </ol>
@@ -173,7 +173,7 @@
     <input type=submit><br>
     <input type=reset><br>
     For Example:
-    <a href="D:\_Web Dev\_Bootcamps\Winfs Anki CodeBook\register.html"> Sample Registration </a>
+    <a href=".\register.html"> Sample Registration </a>
     <hr size="3" noshade="">
     <br>
     
