edited the register file reference links

--- a/Winfs Anki CodeBook/register.html
+++ b/Winfs Anki CodeBook/register.html
@@ -29,7 +29,7 @@
 <body>
     <!-- Use GET Not POST!!!! -->
     <h2><center>Registration Details </center></h2>
-    <a href="D:\_Web Dev\_Bootcamps\Winfs Anki CodeBook\index.html"><center><button>Homepage</button></center></a>
+    <a href=".\index.html"><center><button>Homepage</button></center></a>
 
     <form>
         <label for="FName"><strong>First Name:</strong></label>
