edited index file

--- a/Winfs Anki CodeBook/index.html
+++ b/Winfs Anki CodeBook/index.html
@@ -91,13 +91,13 @@
             <ul>
                 <a href=".\register.html"> Registration Details</a> 
             </ul>
-            <li>CSS Box</li>
+        <li>CSS Box</li>
             <ul>
                 <a href=".\boxun.html"> CSS Box</a> 
             </ul>
+        <li>Wait But Why Lil Test</li>
             <ul>
                 <a href=".\TestUns1.html"> TestUns1</a>
-
             </ul>
         <li>etc ...</li>
     </ol>
