edited index file

--- a/Winfs Anki CodeBook/index.html
+++ b/Winfs Anki CodeBook/index.html
@@ -95,10 +95,10 @@
             <ul>
                 <a href=".\boxun.html"> CSS Box</a> 
             </ul>
-        <li>Wait But Why Lil Test</li>
+        <!-- <li>Wait But Why Lil Test</li>
             <ul>
                 <a href=".\TestUns1.html"> TestUns1</a>
-            </ul>
+            </ul> -->
         <li>etc ...</li>
     </ol>
     <ul>
