edited index file

--- a/Winfs Anki CodeBook/index.html
+++ b/Winfs Anki CodeBook/index.html
@@ -220,6 +220,10 @@
     <br>
     Spending all of your time learning and memorizing all of the html tags and attributes is not the most efficient use of your time. Most job interviews of a web developer will never test this knowledge. What you want to do instead is this: Understand how you can use HTML, and how to use online resources to find html tags and attributes that you need. A great developer is someone who knows how to find solution to problems and knows where to look. No developer can memorize everything, especially when we start learning CSS and Javascript. 
     <hr size="3" noshade="">
-
+    <footer>
+        <div id="fttext">
+        WEDs Anki Website made with unadulterated Love
+        </div>
+    </footer>
 </body>
 </html>
