edited newpage  file

--- a/Winfs Anki CodeBook/newpage.html
+++ b/Winfs Anki CodeBook/newpage.html
@@ -101,7 +101,7 @@
     </section>
     <footer>
         <div id="fttext">
-        Anki Website made with unadulterated Love
+        WEDs Anki Website made with unadulterated Love
         </div>
     </footer>
 </body>
