edited boxun file with footer

--- a/Winfs Anki CodeBook/boxun.html
+++ b/Winfs Anki CodeBook/boxun.html
@@ -32,6 +32,10 @@
         <div class="boxmodel">Final Test</div>
 
     </section>
-    
+    <footer>
+        <div id="fttext">
+        WEDs Anki Website made with unadulterated Love
+        </div>
+    </footer>
 </body>
 </html>
