edited register file with footer

--- a/Winfs Anki CodeBook/register.html
+++ b/Winfs Anki CodeBook/register.html
@@ -90,6 +90,10 @@
 
     </form>
  <!-- test comment -->
-
+ <footer>
+    <div id="fttext">
+    WEDs Anki Website made with unadulterated Love
+    </div>
+</footer>
 </body>
 </html>
