--- a/Winfs Anki CodeBook/register.html
+++ b/Winfs Anki CodeBook/register.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registration Details</title>
-    <link rel="stylesheet" type="text/css" href=".\register.css">
+    <link rel="stylesheet" type="text/css" href=".\registerstyle.css">
     <!-- <style>
         h2{
             font-family: Arial, Helvetica, sans-serif;
