--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
     <br>
     For example:
     <br>
+    <form>
     Firstname: <input type=text><br>
     Lastname: <input type=text><br>
     Birthdate or DOB: <input type=date><br>
@@ -176,7 +177,8 @@
     Reset: <input type=reset value="StartAllOver"><br>
     <input type=submit><br>
     <input type=reset><br>
-    For Example:
+    </form>
+    For See my 'registration page' Example:
     <a href=".\register.html"> Sample Registration </a>
     <hr size="3" noshade="">
     <br>
